# Reweng

./: CMakeLists.txt  README.md
source/: CMakeLists.txt
source/EntityEngine/: componentpool.h  context.cpp  context.h  entity.cpp  entity.h  entityevents.h  event.h  eventmanager.h  eventmanagerutils.h  eventobserver.h  group.cpp  group.h  pool.cpp  pool.h  system.h
source/EntityEngine/components/: inputcomponents.h
source/EntityEngine/systems/: inputsystem.cpp  inputsystem.h
source/common/: error.cpp  error.h  utils.h
source/ecs/: component.h  componentpool.cpp  componentpool.h  componentutils.cpp  componentutils.h  context.cpp  context.h  entity.h  entityevents.h  group.cpp  system.h
source/ecs/components/: inputcomponents.h
source/ecs/systems/: inputsystem.cpp  inputsystem.h
source/events/: eventmanager.h  eventmanagerutils.cpp  eventmanagerutils.h
source/game/: game.cpp
source/game/components/: camera.h  material.h  mesh.h  transform.h
source/game/systems/: inputcleanupsystem.cpp  inputcleanupsystem.h  inputsystem.cpp  inputsystem.h
source/renderer/: glmaterialcomponent.h  glmeshmanager.cpp  glmeshmanager.h  glshader.cpp  glshader.h  glshadermanager.cpp  glshadermanager.h  gltexture.h  gltexturemanager.cpp  gltexturemanager.h  gltransformcomponent.h  meshcomponent.h  modelcomponent.h  modelmanager.cpp  modelmanager.h  pipelinemanager.cpp  pipelinemanager.h  renderer.cpp  renderer.h  vertex.h  windowholder.h
source/renderer/vk/: bufferallocation.cpp  bufferallocation.h  gpu.cpp  gpu.h  pipeline.cpp  pipeline.h  readme.md  renderer.cpp  renderer.h  shaderloader.cpp  shaderloader.h  swapchain.cpp  swapchain.h  vertex.h  windowcontroller.cpp  windowcontroller.h
source/resources/shaders/: fragment.frag  vertex.vert
test/modelview/: CMakeLists.txt  Readme.md  game.cpp  game.h  main.cpp
test/triangle/: CMakeLists.txt  main.cpp
